syntax = "proto3";
package layer.mint;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "github.com/tellor-io/layer/x/mint/types";

// Query defines the gRPC querier service.
service Query {
  // Queries the extra rewards rate.
  rpc GetExtraRewardsRate(QueryGetExtraRewardsRateRequest) returns (QueryGetExtraRewardsRateResponse) {
    option (google.api.http).get = "/tellor-io/layer/mint/get_extra_rewards_rate";
  }

  // Queries the extra rewards pool balance.
  rpc GetExtraRewardsPoolBalance(QueryGetExtraRewardsPoolBalanceRequest) returns (QueryGetExtraRewardsPoolBalanceResponse) {
    option (google.api.http).get = "/tellor-io/layer/mint/get_extra_rewards_pool_balance";
  }
}

// QueryGetExtraRewardsRateRequest is request type for the Query/GetExtraRewardsRate RPC method.
message QueryGetExtraRewardsRateRequest {}

// QueryGetExtraRewardsRateResponse is response type for the Query/GetExtraRewardsRate RPC method.
message QueryGetExtraRewardsRateResponse {
  // daily_extra_rewards defines the daily extra reward rate.
  int64 daily_extra_rewards = 1;
}

// QueryGetExtraRewardsPoolBalanceRequest is request type for the Query/GetExtraRewardsPoolBalance RPC method.
message QueryGetExtraRewardsPoolBalanceRequest {}

// QueryGetExtraRewardsPoolBalanceResponse is response type for the Query/GetExtraRewardsPoolBalance RPC method.
message QueryGetExtraRewardsPoolBalanceResponse {
  // balance defines the extra rewards pool balance.
  cosmos.base.v1beta1.Coin balance = 1 [(gogoproto.nullable) = false];
}
